--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Inter', 'Roboto', sans-serif;
-            background: #000000;
-            color: #ffffff;
+            background: #f5f5f5;
+            color: #1a1a1a;
             line-height: 1.6;
             overflow-x: hidden;
         }
@@ -48,7 +48,7 @@
             left: -50%;
             width: 200%;
             height: 200%;
-            background: linear-gradient(45deg, transparent, rgba(255,255,255,0.1), transparent);
+            background: linear-gradient(45deg, transparent, rgba(255,255,255,0.2), transparent);
             animation: shine 3s infinite;
         }
 
@@ -66,6 +66,8 @@
             align-items: center;
             justify-content: center;
             gap: 10px;
+            color: #fff;
+            font-weight: 800;
         }
 
         .notice-banner p {
@@ -77,7 +79,8 @@
 
         .notice-banner strong {
             color: #ffeb3b;
-            font-weight: 700;
+            font-weight: 900;
+            text-decoration: underline;
         }
 
         /* Hero Section */
@@ -98,7 +101,7 @@
             position: absolute;
             width: 150%;
             height: 150%;
-            background: radial-gradient(circle, rgba(255,255,255,0.1) 1px, transparent 1px);
+            background: radial-gradient(circle, rgba(255,255,255,0.15) 1px, transparent 1px);
             background-size: 50px 50px;
             animation: moveGrid 20s linear infinite;
         }
@@ -121,7 +124,7 @@
             border-radius: 50%;
             overflow: hidden;
             border: 6px solid rgba(255,255,255,0.4);
-            box-shadow: 0 30px 80px rgba(0,0,0,0.4), 0 0 50px rgba(102, 126, 234, 0.6);
+            box-shadow: 0 30px 80px rgba(0,0,0,0.3), 0 0 50px rgba(102, 126, 234, 0.6);
             animation: float 3s ease-in-out infinite;
             position: relative;
         }
@@ -157,9 +160,10 @@
             font-size: 4rem;
             font-weight: 900;
             margin-bottom: 25px;
-            text-shadow: 0 5px 20px rgba(0,0,0,0.4);
+            text-shadow: 0 5px 20px rgba(0,0,0,0.3);
             animation: fadeInUp 1s ease 0.2s both;
             letter-spacing: -1px;
+            color: #fff;
         }
 
         .hero .subtitle {
@@ -168,6 +172,7 @@
             opacity: 0.95;
             animation: fadeInUp 1s ease 0.4s both;
             font-weight: 300;
+            color: #fff;
         }
 
         .cta-button {
@@ -180,7 +185,7 @@
             font-weight: 700;
             font-size: 1.2rem;
             transition: all 0.3s ease;
-            box-shadow: 0 15px 40px rgba(0,0,0,0.4);
+            box-shadow: 0 15px 40px rgba(0,0,0,0.3);
             animation: fadeInUp 1s ease 0.6s both;
             position: relative;
             overflow: hidden;
@@ -206,13 +211,13 @@
 
         .cta-button:hover {
             transform: translateY(-5px);
-            box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+            box-shadow: 0 20px 50px rgba(0,0,0,0.4);
         }
 
         /* Stats Section */
         .stats {
             padding: 80px 20px;
-            background: #0a0a0a;
+            background: #ffffff;
             position: relative;
         }
 
@@ -227,14 +232,16 @@
         .stat-card {
             text-align: center;
             padding: 40px;
-            background: linear-gradient(145deg, #1a1a1a, #222);
+            background: linear-gradient(145deg, #f9f9f9, #fff);
             border-radius: 20px;
-            border: 1px solid #333;
-            transition: transform 0.3s ease;
+            border: 2px solid #e0e0e0;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
         }
 
         .stat-card:hover {
             transform: translateY(-10px);
+            box-shadow: 0 8px 30px rgba(102, 126, 234, 0.2);
         }
 
         .stat-number {
@@ -248,13 +255,13 @@
 
         .stat-label {
             font-size: 1.1rem;
-            color: #aaa;
+            color: #666;
         }
 
         /* Pricing Section */
         .pricing {
             padding: 100px 20px;
-            background: #000;
+            background: #f5f5f5;
             position: relative;
         }
 
@@ -263,9 +270,7 @@
             font-size: 3rem;
             margin-bottom: 70px;
             font-weight: 800;
-            background: linear-gradient(135deg, #fff 0%, #aaa 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: #1a1a1a;
         }
 
         .pricing-grid {
@@ -277,14 +282,15 @@
         }
 
         .price-card {
-            background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
+            background: #ffffff;
             border-radius: 30px;
             padding: 50px 40px;
             text-align: center;
             position: relative;
-            border: 2px solid #333;
+            border: 2px solid #e0e0e0;
             transition: all 0.4s ease;
             overflow: hidden;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.08);
         }
 
         .price-card::before {
@@ -294,7 +300,7 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.05), transparent);
+            background: linear-gradient(90deg, transparent, rgba(102, 126, 234, 0.05), transparent);
             transition: left 0.6s;
         }
 
@@ -305,12 +311,12 @@
         .price-card:hover {
             transform: translateY(-15px) scale(1.02);
             border-color: #667eea;
-            box-shadow: 0 30px 70px rgba(102, 126, 234, 0.5);
+            box-shadow: 0 15px 50px rgba(102, 126, 234, 0.25);
         }
 
         .price-card.featured {
             border-color: #FFD700;
-            box-shadow: 0 25px 60px rgba(255, 215, 0, 0.4);
+            box-shadow: 0 15px 40px rgba(255, 215, 0, 0.25);
             transform: scale(1.05);
         }
 
@@ -336,6 +342,7 @@
             font-size: 2.2rem;
             margin-bottom: 20px;
             font-weight: 800;
+            color: #1a1a1a;
         }
 
         .price {
@@ -364,8 +371,8 @@
 
         .price-features li {
             padding: 18px 0;
-            border-bottom: 1px solid #333;
-            color: #ddd;
+            border-bottom: 1px solid #e0e0e0;
+            color: #333;
             display: flex;
             align-items: center;
             font-size: 1rem;
@@ -384,6 +391,7 @@
             font-weight: 900;
             flex-shrink: 0;
             font-size: 0.9rem;
+            color: white;
         }
 
         .buy-button {
@@ -397,7 +405,7 @@
             font-size: 1.1rem;
             margin-top: 35px;
             transition: all 0.3s ease;
-            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.5);
+            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3);
             position: relative;
             overflow: hidden;
         }
@@ -422,7 +430,7 @@
 
         .buy-button:hover {
             transform: translateY(-3px);
-            box-shadow: 0 20px 50px rgba(102, 126, 234, 0.7);
+            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.5);
         }
 
         .price-card.featured .buy-button {
@@ -452,10 +460,10 @@
 
         /* Footer */
         .footer {
-            background: #000;
+            background: #ffffff;
             padding: 80px 20px 40px;
             text-align: center;
-            border-top: 1px solid #222;
+            border-top: 2px solid #e0e0e0;
         }
 
         .footer-title {
@@ -464,6 +472,7 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            font-weight: 800;
         }
 
         .social-links {
@@ -480,13 +489,13 @@
             justify-content: center;
             width: 60px;
             height: 60px;
-            background: linear-gradient(145deg, #1a1a1a, #2a2a2a);
+            background: linear-gradient(145deg, #f9f9f9, #fff);
             border-radius: 50%;
             color: #667eea;
             font-size: 1.8rem;
             text-decoration: none;
             transition: all 0.3s ease;
-            border: 2px solid #333;
+            border: 2px solid #e0e0e0;
             position: relative;
             overflow: hidden;
         }
@@ -512,7 +521,7 @@
         .social-links a:hover {
             color: white;
             transform: translateY(-8px) scale(1.1);
-            box-shadow: 0 15px 35px rgba(102, 126, 234, 0.5);
+            box-shadow: 0 10px 30px rgba(102, 126, 234, 0.3);
             border-color: #667eea;
         }
 
@@ -605,11 +614,11 @@
     <!-- Important Notice Banner -->
     <section class="notice-banner">
         <div class="notice-content">
-            <h3>⚠️ महत्वपूर्ण सूचना (Important Notice)</h3>
+            <h3>⚠️ IMPORTANT NOTICE</h3>
             <p>
-                <strong>यदि आप कोई भी Subscription खरीदते हैं, तो बाद में आपकी Subscription के लिए दिया गया Payment वापस नहीं होगा।</strong> 
-                चाहे आपको हमारी Service अच्छी लगे या ना लगे, <strong>Payment वापस नहीं होगा।</strong> 
-                इसलिए अपने <strong>जोखिम और ध्यान से Subscription खरीदें।</strong> धन्यवाद!
+                <strong>Once you purchase any subscription, the payment is NON-REFUNDABLE.</strong> 
+                Whether you like our service or not, <strong>we will NOT provide any refund.</strong> 
+                Please purchase subscription <strong>at your own risk and discretion.</strong> Thank you!
             </p>
         </div>
     </section>
@@ -701,7 +710,7 @@
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSciLA2M3H1XVJdVWmbWKhpuwZgLLRIUMAkArIVRHH7u-zoLEg/viewform" class="alt-button" target="_blank">Alternative Form</a>
             </div>
 
-            <!-- Enterprise Plan (NEW) -->
+            <!-- Enterprise Plan -->
             <div class="price-card">
                 <span class="price-badge">💼 ENTERPRISE</span>
                 <h3>Enterprise Plan</h3>
