--- a/index.html
+++ b/index.html
@@ -1,147 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HolaTube - Watch, Promote & Earn HolaCoins</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: #f4f4f4;
-      color: #222;
-    }
-    header {
-      background: linear-gradient(90deg, #ff0057, #ff7a00);
-      color: #fff;
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header h1 { margin: 0; font-size: 22px; }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin-left: 15px;
-      font-weight: 500;
-    }
-    .hero {
-      text-align: center;
-      padding: 60px 20px;
-      background: url('https://images.unsplash.com/photo-1551817958-20204d6ab7d3?auto=format&fit=crop&w=1350&q=80') no-repeat center/cover;
-      color: white;
-    }
-    .hero h2 {
-      font-size: 2.5em;
-      text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
-    }
-    .hero p { font-size: 1.2em; }
-
-    section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 15px;
-      margin-bottom: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-
-    button {
-      background: linear-gradient(90deg, #ff0057, #ff7a00);
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 10px 20px;
-      cursor: pointer;
-      font-size: 1em;
-    }
-
-    footer {
-      text-align: center;
-      background: #111;
-      color: #aaa;
-      padding: 20px;
-      margin-top: 40px;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>HolaTube Shopping & Earning</title>
+<style>
+body{margin:0;font-family:'Poppins',sans-serif;background:#f8f8f8;color:#222;}
+header{background:#ff0057;color:#fff;padding:12px 20px;display:flex;align-items:center;justify-content:space-between;}
+header input{width:60%;padding:8px;border:none;border-radius:8px;}
+.banner{background:url('https://images.unsplash.com/photo-1607083206173-9e105d40d3a4?auto=format&fit=crop&w=1500&q=80')no-repeat center/cover;
+height:200px;display:flex;align-items:center;justify-content:center;color:#fff;font-size:1.5em;font-weight:600;text-shadow:2px 2px 5px #000;}
+.section{padding:20px;}
+.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(150px,1fr));gap:15px;}
+.card{background:#fff;border-radius:12px;box-shadow:0 3px 8px rgba(0,0,0,0.1);overflow:hidden;text-align:center;}
+.card img{width:100%;height:140px;object-fit:cover;}
+.card h4{margin:10px 0 5px;}
+.card p{margin:0 0 8px;font-weight:500;}
+.card button{background:linear-gradient(90deg,#ff0057,#ff7a00);border:none;color:#fff;padding:8px 14px;border-radius:6px;cursor:pointer;}
+.earn{text-align:center;background:#fff;padding:25px;border-radius:15px;box-shadow:0 3px 10px rgba(0,0,0,0.1);}
+footer{background:#111;color:#aaa;text-align:center;padding:15px;margin-top:40px;}
+</style>
 </head>
 <body>
 
-  <header>
-    <h1>🎬 HolaTube</h1>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#earn">Earn</a>
-      <a href="#promotion">Promotion</a>
-      <a href="#wallet">Wallet</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+<header>
+  <h2>HolaTube 🛍️</h2>
+  <input type="text" placeholder="Search for Products... 🔍">
+</header>
 
-  <section class="hero" id="home">
-    <h2>Welcome to HolaTube 🌟</h2>
-    <p>Watch, Promote & Earn HolaCoins Easily 💰</p>
-    <button>Start Earning Now 🚀</button>
-  </section>
+<div class="banner">
+  100% Cashback Offer – Diwali Sale 🎇
+</div>
 
-  <section id="earn">
+<div class="section">
+  <h3>🔥 Trending Products</h3>
+  <div class="grid">
     <div class="card">
-      <h3>💸 Earning System</h3>
-      <p>Earn <b>HolaCoins</b> by promoting HolaTube videos on your social media platforms!</p>
-      <p>👉 <b>10,000 Views = 100 HolaCoins</b> (approx ₹5)</p>
-      <p>Minimum Withdraw: ₹200 | Auto Payment: 48 Hours ⏰</p>
+      <img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f?auto=format&fit=crop&w=400&q=80" alt="">
+      <h4>Stylish Kurti</h4>
+      <p>₹299</p>
+      <button>Buy Now</button>
     </div>
-  </section>
-
-  <section id="promotion">
     <div class="card">
-      <h3>🎥 Promotion Submission</h3>
-      <p>Paste your video link below where you promoted HolaTube 🔗</p>
-      <form>
-        <input type="url" placeholder="Paste your video link here..." required>
-        <textarea placeholder="Short description about your video..."></textarea>
-        <button type="submit">Submit for Review ✅</button>
-      </form>
+      <img src="https://images.unsplash.com/photo-1606813902914-8f63f114e6d7?auto=format&fit=crop&w=400&q=80" alt="">
+      <h4>Smart Watch</h4>
+      <p>₹499</p>
+      <button>Buy Now</button>
     </div>
-  </section>
-
-  <section id="wallet">
     <div class="card">
-      <h3>👛 Your HolaCoin Wallet</h3>
-      <p>Balance: <b>120 HolaCoins</b> (₹6.00)</p>
-      <button>Withdraw Now 💳</button>
+      <img src="https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?auto=format&fit=crop&w=400&q=80" alt="">
+      <h4>Headphones</h4>
+      <p>₹799</p>
+      <button>Buy Now</button>
     </div>
-  </section>
-
-  <section id="contact">
     <div class="card">
-      <h3>📞 Contact HolaTube Team</h3>
-      <p>Facing issues? Need help? Contact us below 👇</p>
-      <form>
-        <input type="text" placeholder="Your Name">
-        <input type="email" placeholder="Your Email">
-        <textarea placeholder="Your Message"></textarea>
-        <button type="submit">Send Message 📩</button>
-      </form>
+      <img src="https://images.unsplash.com/photo-1618354691541-0e3b8b8d83f3?auto=format&fit=crop&w=400&q=80" alt="">
+      <h4>Women's Saree</h4>
+      <p>₹499</p>
+      <button>Buy Now</button>
     </div>
-  </section>
+  </div>
+</div>
 
-  <footer>
-    © 2025 HolaTube. All Rights Reserved. Designed with ❤️ by HolaTube Team.
-  </footer>
+<div class="section earn">
+  <h3>💰 Earn With HolaTube</h3>
+  <p>Promote HolaTube and Earn <b>HolaCoins</b> for every 10K views!</p>
+  <button>Start Earning 🚀</button>
+</div>
+
+<footer>
+  © 2025 HolaTube. All Rights Reserved. Designed with ❤️ by HolaTube Team.
+</footer>
 
 </body>
 </html>
